# cj-llm-kb

./: .gitignore  .ruff.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: ORCHESTRATION_GUIDE.md
.claude/agents/: brain-core-engineer.md  brain-frontend-engineer.md  brain-installer-engineer.md  brain-mcp-engineer.md  brain-prompt-engineer.md  brain-test-engineer.md  brain-ui-designer.md
.github/workflows/: ci.yml  playwright.yml
apps/brain_web/: .gitignore  README.md  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
apps/brain_web/scripts/: e2e_backend.py  start-backend-for-e2e.ps1  start-backend-for-e2e.sh
apps/brain_web/src/app/: layout.tsx  page.tsx
apps/brain_web/src/components/: theme-provider.tsx
apps/brain_web/src/styles/: brand-skin.css  globals.css  tokens.css
apps/brain_web/tests/e2e/: a11y-populated.spec.ts  a11y.spec.ts  active-domain.spec.ts  bulk-import.spec.ts  chat-turn.spec.ts  cross-domain-modal.spec.ts  domains.spec.ts  fixtures.ts  global-setup.ts  ingest-drag-drop.spec.ts  patch-approval.spec.ts  persistence.spec.ts  setup-wizard.spec.ts
apps/brain_web/tests/unit/: api-client.test.ts  app-store-scope-init.test.ts  app-store.test.ts  app.test.tsx  auth-token.test.ts  bootstrap-context.test.tsx  budget-wall.test.tsx  bulk-apply.test.ts  bulk-approve.test.ts  bulk-store.test.ts  chat-store.test.ts  chat-ws-hook.test.ts  composer.test.tsx  cross-domain-modal.test.tsx  dialog-store.test.ts  diff-view.test.tsx  doc-picker.test.tsx  draft-store.test.ts  drop-overlay.test.tsx  drop-zone.test.tsx  dry-run-table.test.tsx  file-to-wiki.test.tsx  file-tree.test.ts  fork-dialog.test.tsx  inbox-store.test.ts  message.test.tsx  mid-turn-toast.test.tsx  modal.test.tsx  new-thread-empty.test.tsx  obsidian-url.test.ts  offline-banner.test.tsx  panel-domains-store-only.test.tsx  patch-card.test.tsx  pending-store.test.ts  proxy-route.test.ts  reject-reason.test.tsx  rename-domain.test.tsx  render-edits.test.ts  rendering.test.tsx  search-overlay.test.tsx  (+25 more)
assets/: .gitignore  README.md  brain.icns  pack_ico.py
docs/: BRAIN.md.template  privacy.md  v0.1.0-known-issues.md
docs/design/: design-brief.md  design-delta.md  plan-07-preflight.md
docs/design/CJ Knowledge LLM/: brain.html
docs/design/CJ Knowledge LLM v4/: brain.html
docs/design/CJ Knowledge LLM v4/assets/: tt-tokens.css
docs/design/CJ Knowledge LLM v4/brand/: brain-brand.html  brain-manifesto.html
docs/design/CJ Knowledge LLM v4/src/: app.jsx  browse.jsx  bulk.jsx  chat.jsx  dialogs-v3.jsx  dialogs.jsx  draft.jsx  icons.jsx  pending.jsx  screens.jsx  settings.jsx  shell.jsx
docs/design/CJ Knowledge LLM v4/styles/: app.css  dialogs.css  (+4 more)
docs/design/cross-domain-modal/: microcopy.md
docs/release-notes/: v0.1.0.md
docs/style/: plan-authoring.md
docs/superpowers/specs/: 2026-04-13-cj-llm-kb-design.md
docs/testing/: clean-mac-vm-host-instructions.md  clean-mac-vm-receipt.md  clean-windows-vm-host-instructions.md  clean-windows-vm-receipt.md  cross-platform.md  manual-qa.md  prompts-vcr.md  v0.1.0-install-walkthrough.md  v0.1.0-qa-receipt.md
docs/testing/screenshots/: README.md
docs/user-guide/: domain-overrides.md
scripts/: cut-local-tarball.sh  cut_local_tarball.py  demo-plan-01.py  demo-plan-02.py  demo-plan-03.py  demo-plan-04.py  demo-plan-05.py  demo-plan-07.py  demo-plan-08.py  demo-plan-09.py  demo-plan-10.py  demo-plan-11.py  demo-plan-12.py  demo-plan-13.py  demo-plan-14.py  install.ps1  install.sh  release.sh  serve-local-tarball.py
scripts/install_lib/: fetch_tarball.ps1  fetch_tarball.sh  fnm_setup.ps1  fnm_setup.sh  make_app_bundle.sh  make_start_menu.ps1  write_shim.ps1  write_shim.sh
scripts/tests/: conftest.py  test_install_ps1.py  test_install_sh.py  test_release_sh.py  test_serve_local_tarball.py
tasks/: lessons.md  todo.md
tasks/plans/: 01-foundation.md  02-ingestion.md  03-chat.md  04-mcp.md  05-api.md  07-frontend.md  08-install.md  09-ship.md  10-configurable-domains.md  11-persistent-config.md  12-settings-ux-and-cleanup.md  13-cross-instance-cleanup-and-test-debt.md  14-hardening-and-ci.md  15-ci-and-polish.md
(+137 files in other folders)
