[project]
name = "brain"
version = "0.1.0"
description = "LLM-maintained personal knowledge base"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "brain_core",
    "brain_cli",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
brain_core = { workspace = true, editable = false }
brain_cli = { workspace = true, editable = false }

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "vcr: requires cassette (deferred in Task 21)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.11",
    "ruff>=0.6",
    "filelock>=3.15",
    "types-PyYAML>=6.0",
    "respx>=0.21",
    "vcrpy>=6.0",
    "pytest-vcr>=1.0",
]
