[project]
name = "brain"
version = "0.1.0"
description = "LLM-maintained personal knowledge base"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "brain_core",
    "brain_cli",
    "brain_mcp",
    "brain_api",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
brain_core = { workspace = true, editable = false }
brain_cli = { workspace = true, editable = false }
brain_mcp = { workspace = true, editable = false }
brain_api = { workspace = true, editable = false }

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Issue #2: importlib mode imports each test by its absolute path rather
# than mutating sys.path. This eliminates the duplicate ``prompts``
# package collision that used to force brain_api/tests/prompts/ to omit
# its __init__.py (and brain_api's mypy config to set
# explicit_package_bases=true as a workaround).
addopts = "--import-mode=importlib"
# importlib mode no longer auto-adds the rootpath of each test to
# sys.path, so test-only sibling helpers imported by bare module name
# need explicit pythonpath entries. brain_api/tests/_ws_helpers.py is
# imported as ``from _ws_helpers import ...`` by 4 WS chat test files.
pythonpath = ["packages/brain_api/tests"]
markers = [
    "vcr: requires cassette (deferred in Task 21)",
    "slow: slow integration tests (~30s+ each); run with ``pytest -m slow`` or unmarked",
]
# Include the install-script integration tests under scripts/tests/ in
# the default discovery set so ``uv run pytest`` picks them up. The
# tests themselves are gated on platform (skip on non-Mac unless
# BRAIN_INSTALL_SH_CI=1) — see scripts/tests/conftest.py.
testpaths = [
    "packages",
    "scripts/tests",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=1.3",
    "mypy>=1.11",
    "ruff>=0.6",
    "filelock>=3.15",
    "types-PyYAML>=6.0",
    "types-psutil>=5.9",
    "respx>=0.21",
    "vcrpy>=6.0",
    "pytest-vcr>=1.0",
    "httpx>=0.27",
    "playwright>=1.58.0",
]
